[gd_scene load_steps=21 format=3 uid="uid://c8nrcyxiviwja"]

[ext_resource type="Script" path="res://Scripts/Characters/Player/player.gd" id="1_h3d68"]
[ext_resource type="PackedScene" uid="uid://clgttbebmbc6a" path="res://Scenes/UI/game_hud.tscn" id="2_3v3hu"]
[ext_resource type="PackedScene" uid="uid://dyuhtn3qc3lec" path="res://Scenes/Menus/pause_menu.tscn" id="2_detwj"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/ray_cast_3d.gd" id="3_xxlw0"]
[ext_resource type="PackedScene" uid="uid://qm70q85pxxiv" path="res://Scenes/Menus/settings/settings.tscn" id="4_ncupa"]
[ext_resource type="PackedScene" uid="uid://d1r8bigpwpvee" path="res://Assets/Characters/Player/animation_files/crouch/crouch.gltf" id="7_cbdqy"]
[ext_resource type="PackedScene" uid="uid://d1gvuomovmdy7" path="res://Assets/Characters/Player/animation_files/walk/walk.gltf" id="7_mr286"]
[ext_resource type="PackedScene" uid="uid://b8sf1no884b21" path="res://Assets/Characters/Player/animation_files/jump/jump.gltf" id="9_jvfl4"]
[ext_resource type="PackedScene" uid="uid://dstwmhq0vqbsn" path="res://Assets/Characters/Player/animation_files/walk/crouch_walk/crouch_walk.gltf" id="10_4lnww"]
[ext_resource type="AudioStream" uid="uid://cclbcgg6lhmf2" path="res://Audio/Sounds/footsteps/footstep_1.mp3" id="11_1h5ng"]
[ext_resource type="PackedScene" uid="uid://c168umaksjc1t" path="res://Assets/Characters/Player/animation_files/Idle/standing.gltf" id="11_hr111"]
[ext_resource type="AudioStream" uid="uid://c7p4mwn6nnxee" path="res://Audio/Sounds/footsteps/footstep_2.mp3" id="12_8rhoo"]
[ext_resource type="AudioStream" uid="uid://0cy5fqwep7wb" path="res://Audio/Sounds/footsteps/footstep_3.mp3" id="13_pjwio"]
[ext_resource type="AudioStream" uid="uid://clw7qovgbe6lj" path="res://Audio/Sounds/footsteps/footstep_4.mp3" id="14_yntht"]
[ext_resource type="AudioStream" uid="uid://dfvny05fbqt4b" path="res://Audio/Sounds/footsteps/footstep_5.mp3" id="15_4oymn"]
[ext_resource type="AudioStream" uid="uid://jgeevskuksmw" path="res://Audio/Sounds/footsteps/footstep_6.mp3" id="16_3ovmg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5nd2e"]
radius = 0.4
height = 1.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k6ler"]
radius = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gpw4u"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4xo0j"]
random_pitch = 1.2
streams_count = 6
stream_0/stream = ExtResource("11_1h5ng")
stream_1/stream = ExtResource("12_8rhoo")
stream_2/stream = ExtResource("13_pjwio")
stream_3/stream = ExtResource("14_yntht")
stream_4/stream = ExtResource("15_4oymn")
stream_5/stream = ExtResource("16_3ovmg")

[node name="player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_mask = 7
script = ExtResource("1_h3d68")

[node name="game_hud" parent="." instance=ExtResource("2_3v3hu")]

[node name="pause_menu" parent="." instance=ExtResource("2_detwj")]

[node name="settings" parent="." instance=ExtResource("4_ncupa")]
visible = false

[node name="CollisionCheck" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, 2, 0)

[node name="CrouchingCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
visible = false
shape = SubResource("CapsuleShape3D_5nd2e")
disabled = true

[node name="StandingCollision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_k6ler")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="Neck" type="Node3D" parent="Head"]

[node name="PlayerCamera" type="Camera3D" parent="Head/Neck"]
fov = 90.0
near = 0.001

[node name="RayCast3D" type="RayCast3D" parent="Head/Neck/PlayerCamera"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -1.3, 0)
collide_with_areas = true
script = ExtResource("3_xxlw0")

[node name="animation_container" type="Node3D" parent="."]
transform = Transform3D(-1.4, -4.44089e-14, 3.33907e-08, -8.34888e-14, 1.39999, 9.53674e-07, -3.33886e-08, 7.7486e-07, -1.4, 0, -1, 0.08)

[node name="walk" parent="animation_container" instance=ExtResource("7_mr286")]
visible = false

[node name="crouch" parent="animation_container" instance=ExtResource("7_cbdqy")]
visible = false

[node name="jump" parent="animation_container" instance=ExtResource("9_jvfl4")]
visible = false

[node name="crouch_walk" parent="animation_container" instance=ExtResource("10_4lnww")]
visible = false

[node name="standing" parent="animation_container" instance=ExtResource("11_hr111")]
transform = Transform3D(1, 2.5411e-21, -1.77636e-15, -1.69407e-21, 1, 0, 0, 0, 1, 0, 0, 0)
visible = false

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
visible = false
shape = SubResource("CapsuleShape3D_gpw4u")

[node name="footsteps" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_4xo0j")
volume_db = -10.0
bus = &"Sfx"

[node name="footstep_timer" type="Timer" parent="footsteps"]
wait_time = 0.6

[connection signal="timeout" from="footsteps/footstep_timer" to="." method="_on_footstep_timer_timeout"]
